made hit button functional

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <main>
         <div>
             <div id="player-board">
-                <div id="player"> <button id="player-button">player</button>                 
+                <div id="player"> 
+                    <button id="player-button">player</button> 
+                    <button id="hit-button">hit</button> 
                 </div>
                 <img id= "player-img1"src="" alt="">
                 <img id= "player-img2"src="" alt="">
