--- a/index.html
+++ b/index.html
@@ -11,22 +11,19 @@
 <body>
     <main>
         <div>
-            <div id="player-board">
-                <div id="player"> 
+            <div id="player">
+                <div> 
                     <button id="player-button">player</button> 
                     <button id="hit-button">hit</button> 
+                    <button id="stand-button">stand</button>
                 </div>
-                <img id= "player-img1"src="" alt="">
-                <img id= "player-img2"src="" alt="">
             </div>
             <div></div>
         </div>
-        <div id="dealer-board">
+        <div id="dealer">
           
-            <div id ="dealer"> <p>dealer</p>
+            <div> <p>dealer</p>
             </div>
-            <img id= "dealer-img1" src="" alt="">
-            <img id= "dealer-img2"src="" alt="">
         </div>
     </main>
     
