made chip buttons proper value, established first round game flow

--- a/index.html
+++ b/index.html
@@ -13,22 +13,23 @@
         <div>
             <div id="player">
                 <div> 
-                    <button id="player-button">player</button> 
+                    <button id="player-button">draw</button> 
                     <button id="hit-button">hit</button> 
                     <button id="stand-button">stand</button>
                 </div>
             
                         <div id="chips">
-                            <button class ="chips"id="green">green</button>
+                            <button class ="chips"id="green">5</button>
                             <p class="qty">0</p>
-                            <button class ="chips"id="blue">blue</button>
+                            <button class ="chips"id="blue">10</button>
                             <p class="qty">0</p>
-                            <button class ="chips"id="red">red</button>
+                            <button class ="chips"id="red">20</button>
                             <p class="qty">0</p>
                         </div>
                         <div id="bet">
                             <h5>bet amount:</h5>
                             <p id="bet-amount">0</p>
+                            <button id="place-bet">BET!</button>
                         </div>
                     </div>   
                 </div>
