bust/dealer wins/dealer hit completed

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                             <p id="bet-amount">0</p>
                             <button id="place-bet">BET!</button>
                         </div>
+                        <!-- <button id="new-game">new game</button> -->
                     </div>   
                 </div>
             <div id="dealer">
