--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <div id="player">
                 <h5>player</h5>
                 <h3 id="player-count"></h3>
+                <p id="player-imgs"></p>
                 <div> 
                     <button id="player-button">deal</button> 
                     <button id="hit-button">hit</button> 
@@ -64,6 +65,7 @@
             <div id="dealer">
                 <h5>dealer</h5>
                 <h3 id="dealer-count"></h3>
+                <p id="dealer-imgs"></p>
                 </div>
         
     </main>
