made lose/win/roung/blackjack counts functional; reset player/dealer arrays on new round. game flow mostly complete

--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
             
                         <div id="chips">
                             <button class ="chips"id="green">5</button>
-                            <p class="qty">0</p>
+                            <p id="g-qty"></p>
                             <button class ="chips"id="blue">10</button>
-                            <p class="qty">0</p>
+                            <p id="b-qty"></p>
                             <button class ="chips"id="red">20</button>
-                            <p class="qty">0</p>
+                            <p id="r-qty"></p>
                         </div>
                         <div id="bet">
                             <h5>bet amount:</h5>
@@ -43,7 +43,7 @@
                         <table id="score">
                             <tr>
                                 <td>Round:</td>
-                                <td id="round#">0</td>
+                                <td id="round#"></td>
                             </tr>
                             <tr>
                                 <td>Wins:</td>
