fixed 'against' in opening modal

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         <h5>
           Your goal is to get your hand to 21, without going over! Once you
           click the deal the button, you'll have the options to 'hit'(draw
-          another card) or 'stand' (compare your hand agains the dealers) You'll
-          win if you score higher!
+          another card) or 'stand' (compare your hand against the dealers)
+          You'll win if you score higher!
         </h5>
         <button id="continue" class="blink">click to continue</button>
       </dialog>
