--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <!-- win/loss message -->
       <div class="container" id="win-or-lose">
         <h1 id="msg"></h1>
-        <button id="new-game">next round</button>
+        <button id="next-round">next round</button>
       </div>
       <!-- player and dealer div  -->
       <div class="container" id="player-and-dealer">
@@ -55,10 +55,10 @@
       <!-- button div -->
 
       <div class="container" id="buttons">
-        <button id="player-button">deal</button>
+        <button id="deal-button">deal</button>
         <button id="hit-button">hit</button>
         <button id="stand-button">stand</button>
-        <button id="reset">reset</button>
+        <button id="clear">clear</button>
       </div>
 
       <div id="bet">
