semantically named buttons

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       </div>
 
       <div id="bet">
-        <button id="place-bet">start</button>
+        <button id="start">start</button>
 
         <div>
           <div id="scores">
