Revert "semantically named buttons"
This reverts commit 5ee7e93894e1e75a626a13130809da61b2b15464.

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       </div>
 
       <div id="bet">
-        <button id="start">start</button>
+        <button id="place-bet">start</button>
 
         <div>
           <div id="scores">
