--- a/index.html
+++ b/index.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,400;1,100;1,200&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/styles.css" />
+   
+    <link rel="stylesheet" href="/css/styles.css" />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -22,55 +20,52 @@
           another card) or 'stand' (compare your hand against the dealers)
           You'll win if you score higher!
         </h5>
-        <button id="continue" class="blink">click to continue</button>
+        <p class="blink">press esc to continue</p>
       </dialog>
 
-     
+      <div id="win-msg">
         <h1 id="msg"></h1>
-        <button id="next-round">next round</button>
-      </div>
-      <!-- player and dealer div  -->
-      <div class="container" id="player-and-dealer">
-        <div id="player">
-          <h5>player</h5>
-          <h3 id="player-count"></h3>
-          <p id="player-imgs"></p>
-        </div>
-        <div id="dealer">
-          <h5>dealer</h5>
-          <h3 id="dealer-count"></h3>
-          <p id="dealer-imgs"></p>
-        </div>
       </div>
 
-      <!-- button div -->
-
-      <div class="container" id="buttons">
-        <button id="deal-button">deal</button>
-        <button id="hit-button">hit</button>
-        <button id="stand-button">stand</button>
-        <button id="clear">clear</button>
-      </div>
-
-      <div id="bet">
-        <button id="place-bet">start</button>
-
+      <div id="player">
+        <h5>player</h5>
+        <h3 id="player-count"></h3>
+        <p id="player-imgs"></p>
         <div>
-          <div id="scores">
-            <span>
-              <p id="round#"></p>
-            </span>
-            <span>
-              <p id="wins#"></p>
-            </span>
-            <span>
-              <p id="losses#"></p>
-            </span>
-            <span>
-              <p id="21#"></p>
-            </span>
-          </div>
+          <button id="player-button">deal</button>
+          <button id="hit-button">hit</button>
+          <button id="stand-button">stand</button>
+          <button id="new-game">next round</button>
+          <button id="reset">reset</button>
         </div>
+
+        <div id="bet">
+          <button id="place-bet">start</button>
+
+          <div>
+            <div id="scores">
+              <span>
+                <p>Rounds:</p>
+                <p id="round#"></p>
+              </span>
+              <span>
+                <p>Wins:</p>
+                <p id="wins#"></p>
+              </span>
+              <span>
+                <p>Losses:</p>
+                <p id="losses#"></p>
+              </span>
+              <span>
+                <p>BlackJacks:</p>
+                <p id="21#"></p>
+              </span>
+            </div>
+      
+      <div id="dealer">
+        <h5>dealer</h5>
+        <h3 id="dealer-count"></h3>
+        <p id="dealer-imgs"></p>
       </div>
     </main>
   </body>
